objects/CCMI__Milestone_Project__c.object
<CustomObject>
    <description>Used for capturing the top level project in the Cloud Coach Fundamentals app (Formerly Cloud Coach Milestones)</description>
    <fields>
        <fullName>CCMI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Milestone Projects</relationshipLabel>
        <relationshipName>Milestone_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Milestone Projects</relationshipLabel>
        <relationshipName>Milestone_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Milestone Projects</relationshipLabel>
        <relationshipName>Milestone_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Cloned_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CCMI__Milestone_Project__c.Id</field>
                <operation>notEqual</operation>
                <valueField>$Source.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CCMI__Milestone_Project__c</referenceTo>
        <relationshipLabel>Milestone Projects</relationshipLabel>
        <relationshipName>Milestone_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCMI__End__c</fullName>
        <inlineHelpText>The calculated end date of the Project, derived the from the calculated end date of the latest finishing Task.</inlineHelpText>
        <label>Calculated End Date</label>
        <summarizedField>CCMI__Milestone_Task__c.CCMI__End__c</summarizedField>
        <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CCMI__Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <summarizedField>CCMI__Milestone_Task__c.CCMI__Estimated_Hours__c</summarizedField>
        <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CCMI__IsLate__c</fullName>
        <formula>CCMI__Late_Task_End__c &lt; TODAY() || CCMI__Late_Task_Start__c &lt; TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Late</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMI__IsTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Template</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCMI__Late_Task_End__c</fullName>
        <description>The end date of the first task that is &quot;In Progress&quot;</description>
        <label>Late Ending Task Date (System)</label>
        <summarizedField>CCMI__Milestone_Task__c.CCMI__End__c</summarizedField>
        <summaryFilterItems>
            <field>CCMI__Milestone_Task__c.CCMI__Status_Enum__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CCMI__Late_Task_Start__c</fullName>
        <description>The start date of the first Task marked as &quot;Not Started&quot;</description>
        <label>Late Starting Task Date (System)</label>
        <summarizedField>CCMI__Milestone_Task__c.CCMI__Start__c</summarizedField>
        <summaryFilterItems>
            <field>CCMI__Milestone_Task__c.CCMI__Status_Enum__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CCMI__Maximum_Task_Status__c</fullName>
        <label>Maximum Task Status</label>
        <summarizedField>CCMI__Milestone_Task__c.CCMI__Status_Enum__c</summarizedField>
        <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CCMI__Minimum_Task_Status__c</fullName>
        <label>Minimum Task Status</label>
        <summarizedField>CCMI__Milestone_Task__c.CCMI__Status_Enum__c</summarizedField>
        <summaryFilterItems>
            <field>CCMI__Milestone_Task__c.CCMI__Status_Enum__c</field>
            <operation>greaterOrEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CCMI__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Milestone Projects</relationshipLabel>
        <relationshipName>Milestone_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Sample_Data__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sample Data</label>
        <referenceTo>CCMI__Sample_Data__c</referenceTo>
        <relationshipLabel>Milestone Projects</relationshipLabel>
        <relationshipName>Milestone_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCMI__Start__c</fullName>
        <inlineHelpText>The calculated start date of the Project, derived the from the calculated start date of the earliest starting Task.</inlineHelpText>
        <label>Calculated Start Date</label>
        <summarizedField>CCMI__Milestone_Task__c.CCMI__Start__c</summarizedField>
        <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CCMI__Status_Override__c</fullName>
        <inlineHelpText>A manual override of the project Status field.</inlineHelpText>
        <label>Status Override</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>On-hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCMI__Status__c</fullName>
        <formula>BLANKVALUE(TEXT(CCMI__Status_Override__c), CASE(CCMI__Minimum_Task_Status__c,
  2, &apos;Completed&apos;,
  1, &apos;In Progress&apos;,
  CASE(CCMI__Maximum_Task_Status__c,
    -1, &apos;On Hold&apos;,
    0, &apos;Not Started&apos;,
    &apos;In Progress&apos;
  )
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The overall status of the project as calculated from the Tasks.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMI__Type__c</fullName>
        <inlineHelpText>A field that enables the grouping of projects by category.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Professional Services</fullName>
                </value>
                <value>
                    <fullName>Customer Onboarding</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCMI__Worked_Hours__c</fullName>
        <label>Entered Hours</label>
        <summarizedField>CCMI__Milestone_Task__c.CCMI__Worked_Hours__c</summarizedField>
        <summaryForeignKey>CCMI__Milestone_Task__c.CCMI__Milestone_Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>CCMI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>